--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "url": "https://github.com/jrvalerio",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
