--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.0",
